--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@ body {
 @layer components {
   h1 {
     @apply  
-      text-[38px] sm:text-[42px] md:text-[46px] lg:text-[50px] xl:text-[56px] 2xl:text-[60px];
+      text-[36px] sm:text-[42px] md:text-[46px] lg:text-[50px] xl:text-[56px] 2xl:text-[60px];
   }
 
   h2 {
@@ -128,6 +128,11 @@ body {
   .text-14 {
     @apply text-[11px] sm:text-[12px] md:text-[13px] lg:text-[13.5px] xl:text-[14px] 2xl:text-[15px];
   }
+
+  .text-10 {
+    @apply text-[7px] sm:text-[8px] md:text-[9px] lg:text-[9.5px] xl:text-[10px] 2xl:text-[11px];
+  }
+
 
   .btn-text {
     @apply font-semibold text-[16px];
